--- a/demo/todo/index.html
+++ b/demo/todo/index.html
@@ -8,7 +8,7 @@
 <body>
 	<script type="module">
 	  import * as index from "./index.mjs"; 
-	  document.body.append(new index.TodoAppController().todoApp.$element);
+	  document.body.append(index.createTodoAppController().todoApp.$element);
 	</script>
 </body>
 </html>
